# paralegal-compiler

./: .gitignore
compile/: Cargo.toml  compiled-policy.rs  test.rs
compile/policies/: control-flow.txt  flows-to.txt  lemmy-instance.txt
compile/policies/atomic/: check-rights.txt  forge-sketch.txt  policy.txt
compile/policies/basic/: bindings.txt  conditional.txt  control-flow-and.txt  control-flow.txt  flows-to-and.txt  flows-to.txt
compile/policies/freedit/: expiration.txt
compile/policies/hyperswitch/: apikey-storage.txt  card-encryption.txt  card-storage.txt
compile/policies/lemmy/: community.txt  instance.txt
compile/policies/plume/: deletion.txt  policy.txt
compile/policies/websubmit/: authorized-disclosure.txt  deletion.txt  scoped-storage.txt
compile/src/: boilerplate.txt  lib.rs  main.rs  parsers.rs
compile/templates/: base.txt  bindings.txt  control-flow.txt  first-var-reference.txt  flows-to.txt  if-flows-to.txt  through.txt
compile/templates/if-flows-to/: some-some.txt
compile/templates/scope/: always.txt
compile/variables/: flows-to-and.toml  flows-to.toml
mvp/: flow-graph.json
policy/: analysis_result.frg  analysis_result.info.json  flow-graph.json
policy/src/: main.rs
test-programs/: Cargo.toml  analysis_result.frg  analysis_result.info.json  flow-graph.json  lemmy-policy.rs
test-programs/src/: main.rs  program.rs
