[package]
name = "compile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
anyhow = "1"
paralegal-policy = { path = "../../paralegal/paralegal/crates/paralegal-policy" }
paralegal = { path = "../../paralegal/paralegal/crates/paralegal" }
lazy_static = "1"
handlebars = "4.5.0"
# serde = "1.0.192"
toml = "0.8.8"